fix visualization of charts with empty sensor values